--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ server.port=8081
 
 # PostgreSQL azure
 
-spring.datasource.url=jdbc:postgresql://beautymanager-db.postgres.database.azure.com:5432/postgres?user=david_koshel&password=Admin2004&sslmode=require
-spring.datasource.username=david_koshel
+spring.datasource.url=jdbc:postgresql://beauty-manager-db.postgres.database.azure.com:5432/postgres?user=DavidKoshel&password=Admin2004&sslmode=require
+spring.datasource.username=DavidKoshel
 spring.datasource.password=Admin2004
 spring.jpa.database=POSTGRESQL
 spring.jpa.show-sql=true
