--- a/.github/workflows/MyPipeline.yml
+++ b/.github/workflows/MyPipeline.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
+      - name: Run unit tests
+        run: mvn test
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
