--- a/.github/workflows/MyPipeline.yml
+++ b/.github/workflows/MyPipeline.yml
@@ -28,6 +28,15 @@ jobs:
       - name: Run unit tests
         run: mvn test
 
+      - name: Docker Login
+        run: echo ${{ secrets.DOCKER_HUB_PASSWORD }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/beauty-manager:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKER_HUB_USERNAME }}/beauty-manager:latest
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
